// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionDetails renders annual plan with trial correctly 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--background-color-background-section mm-box--rounded-lg"
    data-testid="shield-subscription-approve__subscription_details_section"
  >
    <div
      class="flex flex-row items-start justify-between p-2"
    >
      <div
        class="flex flex-col items-start justify-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md-bold mm-box--color-text-default"
        >
          Transaction Shield
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          $80/year (Annual)
        </p>
      </div>
      <div
        class="items-center pr-1 pl-1"
        data-testid="free-seven-day-trial"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-inherit"
        >
          Free 7-day trial
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionDetails renders monthly plan without trial correctly 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--background-color-background-section mm-box--rounded-lg"
    data-testid="shield-subscription-approve__subscription_details_section"
  >
    <div
      class="flex flex-row items-start justify-between p-2"
    >
      <div
        class="flex flex-col items-start justify-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md-bold mm-box--color-text-default"
        >
          Transaction Shield
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          $8/month (Monthly)
        </p>
      </div>
    </div>
  </div>
</div>
`;
